--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,6 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-//apply plugin: 'war'
-
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -31,8 +29,6 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    //compile('mysql:mysql-connector-java')
-    compile('org.postgresql:postgresql')
+    compile('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    //providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
