--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,6 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'war'
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
@@ -30,8 +29,6 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok:1.18.2')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('mysql:mysql-connector-java')
+    compile('org.postgresql:postgresql')
     testCompile('org.springframework.boot:spring-boot-starter-test')
-
-    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
