--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok:1.18.2')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.postgresql:postgresql')
+    compile('mysql:mysql-connector-java')
+    compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
