--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
     compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
+    compile('org.apache.commons:commons-lang3:3.0')
+    compile('commons-validator:commons-validator:1.4.0')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
