--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compile('org.projectlombok:lombok:1.18.2')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
+    compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
+    compile('org.apache.commons:commons-lang3:3.0')
+    compile('commons-validator:commons-validator:1.4.0')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
     //Swagger
