--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.mail.username=testmailforjava66@gmail.com
 spring.mail.password=testmail92$$
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ADMINISTRATION
+admin.mail=testmailforjava66@gmail.com
