--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.username=kodilla
+spring.datasource.password=kodilla_password
 
 #TRELLO CONFIGURATION
 
@@ -18,7 +19,29 @@ spring.mail.port=587
 spring.mail.username=testmailforjava66@gmail.com
 spring.mail.password=testmail92$$
 spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.trust=*
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
 admin.mail=testmailforjava66@gmail.com
+
+#ACTUATOR
+endpoints.metrics.enabled=true
+endpoints.health.enabled=true
+endpoints.beans.enabled=true
+endpoints.mappings.enabled=true
+management.security.enabled=false
+
+#ACTUATOR INFO
+info.app.name=Tasks Application
+info.app.description=Application has been created on Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=John
+info.app.owner.surname=Doe
+info.app.administrator.email=john.doe@test.com
+info.app.administrator.adress.street=Super Cool Street
+info.app.administrator.adress.number=42
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is make world the better place!
+info.company.email=tasks@crud.com
+info.company.phone=744489230
