--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     compile('org.apache.commons:commons-lang3:3.0')
     compile('commons-validator:commons-validator:1.4.0')
     compile('com.google.code.gson:gson:2.8.5')
+    compile('org.thymeleaf:thymeleaf:3.0.10.RELEASE')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf:2.0.6.RELEASE')
+
+
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
