--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.mail.properties.mail.smtp.ssl.trust=*
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
+admin.name=Kodilla User
 admin.mail=testmailforjava66@gmail.com
 
 #ACTUATOR
