--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok:1.18.2')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('mysql:mysql-connector-java')
+    compile('org.postgresql:postgresql')
     compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.apache.commons:commons-lang3:3.0')
